--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -22,7 +22,7 @@
             android:textSize="15sp"
             android:imeActionLabel="actionGo"
             android:singleLine="true"
-            android:hint="Search a product"/>
+            android:hint="Tìm kiếm..."/>
 
         <ImageButton
             android:id="@+id/searchBtn"
@@ -40,10 +40,48 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="7dp"
+        android:layout_marginBottom="-51dp"
+        android:background="#3814BA"
+        android:orientation="horizontal"
+        android:id="@+id/controlLocation"
+        android:padding="15dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/baseline_trending_up_24" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity=""
+
+            android:layout_marginStart="10dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/gluten_bold"
+            android:text="Top khách sạn quốc tế"
+            android:textColor="#fff"
+            android:textSize="16dp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="15dp"
+            android:src="@drawable/baseline_trending_up_24" />
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_below="@+id/linearLayout"
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/searchView"/>
+        android:layout_below="@+id/controlLocation"
+        android:layout_marginTop="10" />
 
 </RelativeLayout>
