--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -41,40 +41,43 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/controlLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_below="@+id/linearLayout"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="7dp"
-        android:layout_marginBottom="-51dp"
-        android:background="#3814BA"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="#ffff"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:id="@+id/controlLocation"
-        android:padding="15dp">
+        android:padding="10dp">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:src="@drawable/baseline_trending_up_24" />
+            android:layout_marginStart="0dp"
+            android:src="@drawable/baseline_location_on_24" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity=""
-
+            android:layout_gravity="center"
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/gluten_bold"
-            android:text="Top khách sạn quốc tế"
-            android:textColor="#fff"
-            android:textSize="16dp" />
+            android:text="Tp. Hồ Chí Minh"
+            android:textColor="#3814BA"
+            android:textSize="12dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:src="@drawable/baseline_trending_up_24" />
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/baseline_menu_open_24" />
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
@@ -82,6 +85,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/controlLocation"
-        android:layout_marginTop="10" />
+
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="-104dp" />
 
 </RelativeLayout>
