--- a/app/src/main/res/layout/layout_all_view_home.xml
+++ b/app/src/main/res/layout/layout_all_view_home.xml
@@ -40,6 +40,8 @@
                 android:textColor="#000000"
                 android:maxLines="2"
                 android:textSize="12dp"
+                android:height="34dp"
+                android:maxHeight="34dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="5dp"
