--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
-    android:background="#ffffff"
+    android:background="#E5E5E5"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.HomeFragment">
@@ -12,6 +12,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:id="@+id/nestedScroll"
+        android:background="@color/White300"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
@@ -119,9 +120,9 @@
                     android:textSize="16dp"
                     android:layout_marginStart="15dp"
                     android:layout_gravity=""
-                    android:fontFamily="@font/grandstander_semi_bold"
+                    android:fontFamily="@font/helvetica_neue"
                     android:layout_marginTop="10dp"
-                    android:textColor="#3814BA"
+                    android:textColor="@color/GlacierBlueColor"
                     android:text="Điểm đến yêu thích trong nước"/>
 
                 <TextView
@@ -130,8 +131,8 @@
                     android:textSize="12dp"
                     android:layout_marginStart="15dp"
                     android:layout_gravity=""
-                    android:fontFamily="@font/grandstander_semi_bold"
-                    android:textColor="#3814BA"
+                    android:fontFamily="@font/helvetica_bold"
+                    android:textColor="@color/GlacierBlueColor"
                     android:layout_marginBottom="10dp"
                     android:text="Lên rừng xuống biển. Trọn vẹn Việt Nam"/>
             </LinearLayout>
@@ -153,7 +154,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="horizontal"
-                android:background="@color/primaryColor"
+                android:background="@color/GlacierBlueColor"
                 android:padding="15dp"
                 android:layout_marginBottom="10dp"
                 android:layout_height="wrap_content">
@@ -166,7 +167,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16dp"
-                    android:fontFamily="@font/gluten_bold"
+                    android:fontFamily="@font/helvetica_bold"
                     android:layout_gravity=""
                     android:layout_marginStart="10dp"
                     android:textColor="#fff"
@@ -185,13 +186,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:layout_marginTop="10dp"
-                android:background="#3814BA"/>
+                android:background="@color/GlacierBlueColor"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
 
-                android:background="#C83034FF"
+                android:background="@color/IceColor"
                 android:layout_height="wrap_content">
 
                 <LinearLayout
@@ -291,7 +292,7 @@
                             android:textSize="16dp"
                             android:layout_marginStart="15dp"
                             android:layout_gravity=""
-                            android:fontFamily="@font/grandstander_semi_bold"
+                            android:fontFamily="@font/helvetica_neue"
                             android:layout_marginTop="10dp"
                             android:textColor="#ffffff"
                             android:text="Top Khách Sạn Tốt Nhất Vũng Tàu"/>
@@ -302,7 +303,7 @@
                             android:textSize="12dp"
                             android:layout_marginStart="15dp"
                             android:layout_gravity=""
-                            android:fontFamily="@font/grandstander_semi_bold"
+                            android:fontFamily="@font/helvetica_neue"
                             android:textColor="#ffffff"
                             android:layout_marginBottom="10dp"
                             android:text="Thư giãn - Nạp năng lượng - Khám phá mới"/>
@@ -345,7 +346,7 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:background="#3814BA"
+                android:background="@color/GlacierBlueColor"
                 android:orientation="horizontal"
                 android:layout_marginTop="10dp"
                 android:padding="15dp"
@@ -422,7 +423,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:background="#3814BA"/>
+                android:background="@color/GlacierBlueColor"/>
 
             <View
                 android:layout_width="1dp"
