--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="purple_700">#1995AD</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -13,5 +13,6 @@
     <color name="WarmGrayColor">#BCBABE</color>
     <color name="IceColor">#A1D6E2</color>
     <color name="GlacierBlueColor">#1995AD</color>
+    <color name="White300">#FFFFFF</color>
 
 </resources>
