--- a/app/src/main/res/layout/layout_all_cart.xml
+++ b/app/src/main/res/layout/layout_all_cart.xml
@@ -33,7 +33,7 @@
                 android:layout_marginTop="5dp"
                 android:height="34dp"
                 android:maxHeight="34dp"
-                android:fontFamily="@font/gluten_bold"
+                android:fontFamily="@font/helvetica_neue_medium"
                 android:text="Product Name"/>
 
             <TextView
@@ -46,7 +46,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/gluten_bold"
+                android:fontFamily="@font/helvetica_neue_medium"
                 android:text="200"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
