--- a/app/src/main/res/layout/layout_all_view_home.xml
+++ b/app/src/main/res/layout/layout_all_view_home.xml
@@ -45,7 +45,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="5dp"
-                android:fontFamily="@font/gluten_bold"
+                android:fontFamily="@font/helvetica_bold"
                 android:text="Product Name"/>
 
             <TextView
@@ -58,7 +58,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="10dp"
-                android:fontFamily="@font/gluten_bold"
+                android:fontFamily="@font/helvetica_bold"
                 android:text="200"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
