--- a/app/src/main/res/layout/layout_categories.xml
+++ b/app/src/main/res/layout/layout_categories.xml
@@ -32,6 +32,7 @@
                 android:maxLines="2"
                 android:textStyle="bold"
                 android:textSize="16dp"
+                android:fontFamily="@font/helvetica_bold"
                 android:textAlignment="center"
                 android:layout_marginBottom="10dp"
                 android:layout_marginTop="5dp"
