--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,11 +37,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="15dp"
+                android:layout_margin="8dp"
                 android:fontFamily="@font/helvetica_bold"
-                android:text="Home"
+                android:text="Trang Chủ"
                 android:textColor="@color/GlacierBlueColor"
-                android:textSize="15dp" />
+                android:textSize="16dp" />
 
             <RelativeLayout
                 android:layout_width="wrap_content"
