--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:layout_centerHorizontal="true"
-        android:fontFamily="@font/gluten_bold"
+        android:fontFamily="@font/helvetica_bold"
         android:layout_marginBottom="20dp"
         android:layout_above="@+id/linearLayout"
         android:textColor="@color/purple_500"
@@ -118,7 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:fontFamily="@font/grandstander_bold"
+                android:fontFamily="@font/helvetica_bold"
                 android:text="Bạn không có tài khoản ?"
                 android:textAlignment="center"
                 android:textColor="#ffffff" />
@@ -130,7 +130,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_below="@+id/txt1"
                 android:layout_centerHorizontal="true"
-                android:fontFamily="@font/gluten_semi_bold"
+                android:fontFamily="@font/helvetica_bold"
                 android:text="Đăng ký ngay"/>
         </RelativeLayout>
 
