--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/pName"
                     android:layout_width="match_parent"
                     android:text="Product Name"
-                    android:fontFamily="@font/gluten_bold"
+                    android:fontFamily="@font/helvetica_bold"
                     android:textColor="#000"
                     android:maxLines="1"
                     android:layout_marginEnd="12dp"
@@ -45,6 +45,7 @@
                     android:text="Product Description"
                     android:textSize="12dp"
                     android:textColor="#A8A8A8"
+                    android:fontFamily="@font/helvetica_bold"
                     android:maxLines="2"
                     android:layout_marginEnd="12dp"
                     android:layout_marginStart="10dp"
@@ -68,7 +69,7 @@
                         android:layout_height="wrap_content"
                         android:text="200.000 đ"
                         android:layout_marginTop="5dp"
-                        android:fontFamily="@font/gluten_bold"
+                        android:fontFamily="@font/helvetica_bold"
                         android:textColor="#000"
                         android:maxLines="1"
                         android:layout_weight="1" />
