--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:fontFamily="@font/helvetica_bold"
         android:layout_marginBottom="20dp"
         android:layout_above="@+id/linearLayout"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/IceColor"
         android:text="Đăng Nhập"/>
 
     <LinearLayout
