--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -114,7 +114,7 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="30dp"
-                android:background="@drawable/button_bg2"
+                android:background="@drawable/button_bg"
                 android:text="Bắt đầu bán hàng"
                 android:textColor="#fff"
                 android:visibility="visible" />
