--- a/app/src/main/res/layout/activity_filter_the_data.xml
+++ b/app/src/main/res/layout/activity_filter_the_data.xml
@@ -8,34 +8,61 @@
     tools:context=".FilterTheDataActivity">
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"></LinearLayout>
+
+    <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
+        android:background="@color/IceColor"
         android:layout_height="50dp">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="TextView" />
+            <TextView
+                android:id="@+id/tv_filter_tinhthanh"
+                android:layout_width="150dp"
+                android:textColor="@color/black"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/helvetica_neue"
+                android:text="TP Hồ Chí Minh" />
+
+            <TextView
+                android:id="@+id/tv_filter_loai"
+                android:layout_width="130dp"
+                android:layout_marginLeft="10dp"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:fontFamily="@font/helvetica_neue"
+                android:text="Loại Phòng" />
+        </LinearLayout>
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Áp Dụng" />
+            android:id="@+id/btnApDung"
+            android:layout_width="80dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/round_white"
+            android:backgroundTint="#FAF8F7"
+            android:textSize="10dp"
+            android:textColor="#1B33BC"
+            android:textStyle="bold"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:fontFamily="@font/helvetica_bold"
+            android:text="Áp dụng"/>
     </LinearLayout>
 
     <ListView
+        android:id="@+id/lv_filterprovinder"
         android:layout_width="149dp"
         android:layout_height="692dp"
+
+
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
         tools:layout_editor_absoluteX="2dp" />
 
@@ -47,12 +74,16 @@
         tools:layout_editor_absoluteX="152dp">
 
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/switch_check"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Switch" />
+
+            android:textColor="@color/black"
+            android:fontFamily="@font/helvetica_neue"
+            android:text="Giá tăng dần" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview_filter_loai"
             android:layout_width="match_parent"
             android:layout_height="662dp" />
     </LinearLayout>
