--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -74,6 +74,7 @@
             android:textSize="12dp" />
 
         <ImageView
+            android:id="@+id/image_filter"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginStart="10dp"
