--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -133,6 +133,8 @@
                     app:cardCornerRadius="10dp"
                     android:layout_height="69dp">
                     <ImageView
+                        android:id="@+id/img2"
+
                         android:layout_width="match_parent"
                         android:scaleType="centerCrop"
                         android:layout_height="match_parent"
@@ -174,7 +176,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
                     android:textSize="15dp"
-                    android:text="Mô Tả"/>
+                    android:text="Địa Chỉ"/>
 
                 <TextView
                     android:id="@+id/pDesc"
@@ -196,8 +198,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#000000"
-                    android:text="Phản Hồi"/>
+                    android:text="Mô tả"/>
                 <TextView
+                    android:id="@+id/txtdesc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="#BFBFBF"
