--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -160,7 +160,7 @@
                     android:layout_marginStart="30dp"
                     android:fontFamily="@font/helvetica_bold"
                     android:layout_toEndOf="@+id/guser_single_image"
-                    android:text="Tài Khoản"
+                    android:text="Lịch sử"
 
                     android:layout_centerVertical="true"
                     android:textColor="#031161"
