--- a/app/src/main/res/layout/layout_all_item.xml
+++ b/app/src/main/res/layout/layout_all_item.xml
@@ -21,7 +21,7 @@
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:scaleType="centerCrop"
-                android:src="@drawable/item_img_bg"/>
+                android:src="@drawable/vung_tau_bg"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:orientation="vertical"
@@ -29,7 +29,7 @@
                 <TextView
                     android:id="@+id/pName"
                     android:layout_width="match_parent"
-                    android:text="Hotel name"
+                    android:text="Product Name"
                     android:fontFamily="@font/helvetica_bold"
                     android:textColor="#000"
                     android:maxLines="1"
@@ -42,10 +42,9 @@
                 <TextView
                     android:id="@+id/pDesc"
                     android:layout_width="match_parent"
-                    android:text="Hotel Description"
+                    android:text="Product Description"
                     android:textSize="12dp"
                     android:textColor="#A8A8A8"
-                    android:fontFamily="@font/helvetica_bold"
                     android:maxLines="2"
                     android:layout_marginEnd="12dp"
                     android:layout_marginStart="10dp"
@@ -67,21 +66,13 @@
                         android:id="@+id/pPrice"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="200.000 vnđ"
+                        android:text="500.000đ"
                         android:layout_marginTop="5dp"
                         android:fontFamily="@font/helvetica_bold"
-                        android:textColor="#000"
+                        android:textColor="#D33A2F"
                         android:maxLines="1"
                         android:layout_weight="1" />
 
-                    <TextView
-                        android:id="@+id/likeBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:textSize="10dp"
-                        android:layout_marginEnd="20dp"
-                        android:text="Đã xem" />
 
                     <ImageView
                         android:id="@+id/shareBtn"
