--- a/app/src/main/res/layout/layout_cart_column.xml
+++ b/app/src/main/res/layout/layout_cart_column.xml
@@ -26,6 +26,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#000000"
+                android:minHeight="38dp"
+                android:maxHeight="38dp"
                 android:maxLines="2"
                 android:textSize="14dp"
                 android:layout_marginStart="10dp"
@@ -40,6 +42,9 @@
                 android:textColor="#BCBBBB"
                 android:maxLines="2"
                 android:fontFamily="@font/helvetica_bold"
+                android:minHeight="28dp"
+                android:maxHeight="28dp"
+
                 android:textSize="12dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="5dp"
